View component has been fixed.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -105,4 +105,6 @@ dependencies {
     //RxAndroid
     implementation "io.reactivex.rxjava3:rxandroid:3.0.2"
 
+    implementation("io.coil-kt:coil-compose:2.5.0")
+
 }
