--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'com.android.application'
+    alias libs.plugins.android.application
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
     id 'com.google.dagger.hilt.android'
@@ -53,7 +53,7 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.12.0'
+    implementation libs.androidx.ktx
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.2'
     implementation 'androidx.activity:activity-compose:1.8.0'
     implementation platform('androidx.compose:compose-bom:2023.03.00')
@@ -88,7 +88,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.6.2"
 
     //Dagger - Hilt
-    implementation "com.google.dagger:hilt-android:2.44"
+    implementation libs.dagger.hilt
     kapt "com.google.dagger:hilt-android-compiler:2.44"
     kapt "androidx.hilt:hilt-compiler:1.0.0"
     implementation 'androidx.hilt:hilt-navigation-compose:1.1.0-rc01'
@@ -106,5 +106,7 @@ dependencies {
     implementation "io.reactivex.rxjava3:rxandroid:3.0.2"
 
     implementation("io.coil-kt:coil-compose:2.5.0")
+
+    implementation 'androidx.compose.material3:material3:1.2.0-beta01'
 
 }
